--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -1,4 +1,4 @@
-/* Last updated 22/12/07 17:20 sjbeli */
+/* Last updated 22/12/07 17:30 sjbeli */
 /* RESET ITEMS */
 *, *:before, *:after {
   box-sizing: border-box;
@@ -9,7 +9,7 @@
 :root {
   --black: black;
   --black2: #122620;
-  --black3: #444;
+  --black3: #555;
   --gold: #B68D40;
   --gold2: #D6AD60;
   --cream: #F4EBD0;
@@ -70,7 +70,7 @@ img {
 .header-text {
   width: 100%;
   margin: 0;
-  padding: 1rem 0 1.25rem;
+  padding: 1rem 0.5rem 1.25rem;
   text-align: center;
   background-color: var(--black);
   filter: opacity(0.9);
@@ -80,7 +80,7 @@ img {
 }
 .phone a:hover,
 .phone a:focus {
-  color: var(--cream);
+  color: var(--gold);
 }
 
 /* NAVIGATION ITEMS */
@@ -139,7 +139,7 @@ h1 {
 h2, h3 {
   font-size: 1rem;
   font-weight: 400;
-  color: var(--gold);
+  color: var(--gold2);
 }
 a {
   color: var(--white);
@@ -227,11 +227,11 @@ footer {
   color: var(--cream);
 }
 footer a {
-  color: var(--gold2);
+  color: var(--gold);
 }
 footer a:hover,
 footer a:focus {
-  color: var(--gold);
+  color: var(--gold2);
 }
 
 /* MATERIAL-SYMBOLS-OUTLINED - GOOGLE FONTS & ICONS/SYMBOLS:
