add store hrs address phone fax map payment info

--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -1,4 +1,4 @@
-/* Last updated 22/12/07 17:30 sjbeli */
+/* Last updated 22/12/07 18:20 sjbeli */
 /* RESET ITEMS */
 *, *:before, *:after {
   box-sizing: border-box;
@@ -214,6 +214,14 @@ section p {
 }
 .last {
   padding-bottom: 2.25rem;
+}
+
+/* GOOGLE MAP */
+iframe {
+  margin: 1rem 0;
+  border: none;
+  width: 100%;
+  height: 400px;
 }
 
 /* FOOTER ITEMS */
