css tweaks adj anchors

--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -1,4 +1,4 @@
-/* Last updated 22/12/07 18:30 sjbeli */
+/* Last updated 22/12/07 18:50 sjbeli */
 /* RESET ITEMS */
 *, *:before, *:after {
   box-sizing: border-box;
@@ -37,7 +37,8 @@ body {
   justify-content: space-between;
   position: relative;
   height: 55vh;
-  min-height: 455px;
+  min-height: 565px;
+  max-height: 600px;
   width: 100vw;
   max-width: 1400px;
   min-width: 290px;
