--- a/ace-comp/css/styles.css
+++ b/ace-comp/css/styles.css
@@ -1,4 +1,4 @@
-/* Last updated 22/12/08 14:55 sjbeli */
+/* Last updated 22/12/08 15:35 sjbeli */
 /* RESET ITEMS */
 *, *:before, *:after {
   box-sizing: border-box;
@@ -15,7 +15,7 @@
   --cream: #F4EBD0;
   --white: white;
   --opacity: 0.90;
-  --opacity2: 0.75;
+  --opacity2: 0.85;
 }
 html {
   scroll-behavior: smooth;
@@ -59,7 +59,7 @@ li a {
 .about-list {
   display: block;
   list-style-type: disc;
-  line-height: 1.6;
+  line-height: 1.5;
   margin: 0 0 2.25rem;
   padding-left: 2rem;
   color: var(--black3);
@@ -68,11 +68,11 @@ li a {
   display: inline-block;
   padding: 0;
   }
-/* ADJUST NAV HOME ICON ORIENTATION (fn google) */
+/* ADJUST NAV HOME ICON VERTICAL ORIENTATION (fn google!) */
 li:first-child {
   margin-bottom: -5px;
 }
-/* NOW NEED TO ADJUST ABOUT-LIST FIRST CHILD BECAUSE ABOVE (yes, f-google!) */
+/* NOW NEED TO RE-ADJUST ABOUT-LIST FIRST CHILD BECAUSE ABOVE (yea, f-google) */
 .about-list li:first-child {
   margin-bottom: 0;
 }
@@ -88,6 +88,7 @@ li:first-child {
   background-repeat: no-repeat;
   background-position: bottom center;
   background-image: url('../img/manch-downtown-above.jpg');
+  /* background-attachment: fixed; */
 }
 .overlay {
   position: relative;
@@ -97,6 +98,7 @@ li:first-child {
   flex-direction: column;
   height: 100%;
   width: 100%;
+  background-color: rgba(255, 255, 255, 0.15);
 }
 #logo {
   padding: 2rem 0 0.25rem;
@@ -187,22 +189,22 @@ section p {
   color: var(--gold);
   border-bottom: 1px dotted transparent;
 }
-/* ANCHOR FIX */
+/* ANCHOR FIX 1 of 3 */
 #contact {
     margin-top: -8rem;
     padding-top: 8em;
   }
 
-/********* MEDIA QUERIES ***********/
+/********* BEGIN MEDIA QUERIES ***********/
 @media screen and (min-width: 343px) {
-  /* ANCHOR FIX */
+  /* ANCHOR FIX 2 of 3 */
   #contact {
     margin-top: -5rem;
     padding-top: 5rem;
   }
 }
 @media screen and (min-width: 512px) {
-  /* ANCHOR FIX */
+  /* ANCHOR FIX 3 of 3 */
   #contact {
     margin-top: -2.75rem;
     padding-top: 2.75rem;
@@ -283,7 +285,6 @@ footer a:hover,
 footer a:focus {
   color: var(--gold2);
 }
-
 
 /* MATERIAL-SYMBOLS-OUTLINED - GOOGLE FONTS & ICONS/SYMBOLS:
 https://fonts.google.com/icons?icon.set=Material+Symbols */
